[gd_scene load_steps=28 format=3 uid="uid://bjdwhx3f5cyq8"]

[ext_resource type="Script" uid="uid://brubiem56ivgb" path="res://controllers/scripts/fps_controller.gd" id="1_v8m2t"]
[ext_resource type="Script" uid="uid://c7hal5vnftec" path="res://controllers/scripts/reticle.gd" id="2_lwx6h"]
[ext_resource type="Theme" uid="uid://co7fvhogw8woi" path="res://ui/themes/debug.tres" id="3_r0vb7"]
[ext_resource type="Script" uid="uid://cbk67gdojqj35" path="res://scripts/debug_panel.gd" id="4_xf6l8"]
[ext_resource type="Script" uid="uid://c3ieg6j4bsake" path="res://scripts/player_state_machine.gd" id="5_dn71m"]
[ext_resource type="Script" uid="uid://dqvyswp1obyma" path="res://controllers/idle_state.gd" id="6_ec7y2"]
[ext_resource type="Script" uid="uid://d0o8j3ylvw5ew" path="res://controllers/walking_state.gd" id="6_ypegj"]
[ext_resource type="Script" uid="uid://biinbo1pgmwyo" path="res://controllers/sprinting_player_state.gd" id="8_ioeo4"]
[ext_resource type="Script" uid="uid://mmaf2tdwsqvn" path="res://controllers/crouching_player_state.gd" id="9_0pigf"]
[ext_resource type="Script" uid="uid://dr5c6ftmoh0iw" path="res://controllers/sliding_player_state.gd" id="10_i2oq4"]
[ext_resource type="Script" uid="uid://08qu7d3h02xv" path="res://controllers/jumping_player_state.gd" id="11_vpqbg"]
[ext_resource type="Script" uid="uid://cm818nvnvvm0s" path="res://controllers/falling_player_state.gd" id="12_njtpt"]
[ext_resource type="Script" uid="uid://d1yh2aper85qv" path="res://controllers/wall_running_player_state.gd" id="13_u8dbi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4xowi"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_a202f"]
lightmap_size_hint = Vector2i(17, 14)
add_uv2 = true

[sub_resource type="Animation" id="Animation_lwx6h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.7, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ShapeCastTop:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CameraController/Camera3D:fov")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0]
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CameraController:rotation:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_v8m2t"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.7, 0), Vector3(0, 0.1, 0)]
}

[sub_resource type="Animation" id="Animation_njtpt"]
resource_name = "jump_end"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0, -0.0117664, -0.0244632, -0.0333333, 0.000501033, 0.2, 0, 0, -0.266667, -0.00244188, 0.2, 0),
"times": PackedFloat32Array(0, 0.085, 0.4)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.085, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.7, 0), Vector3(0, 0.65, 0), Vector3(0, 0.7, 0)]
}

[sub_resource type="Animation" id="Animation_vpqbg"]
resource_name = "jump_start"
length = 0.55
step = 0.0333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, -5.69036e-05, -0.017801, -0.133333, 0.000213949, 0.25, 0, 0, -0.116836, 0.000155583, 0.216498, 4.93398e-05),
"times": PackedFloat32Array(0, 0.2, 0.550169)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.7, 0), Vector3(0, 0.65, 0), Vector3(0, 0.7, 0)]
}

[sub_resource type="Animation" id="Animation_i2oq4"]
resource_name = "sliding"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.3, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.6, 0), Vector3(0, -0.05, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShapeCastTop:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.35, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController/Camera3D:fov")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 84.0, 75.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 4.0]
}

[sub_resource type="Animation" id="Animation_ioeo4"]
resource_name = "sprinting"
length = 1.2
loop_mode = 1
step = 0.0333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.0606265, -0.0333333, -0.00733563, 0.0666667, 0.035211, 0.0807994, 0, 0, 0, 0.000366785, -0.0630581, 0, 0.00213572, 0.0666667, -0.0183391, -0.0690239, 0, 1.37389e-05, 0, 3.92646e-06, 0, -0.0398633, 0.000104759, 0, -0.000721947),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.7, -0.25, 0, 0.25, 0, 0.620422, -0.0333333, 0.00666887, 0.0666667, -0.00848746, 0.608297, 0, -0.000303149, 0.25, 0, 0.770166, 0, -0.00030303, 0.0666667, 0.0151563, 0.783504, 0, 0, 0, -0.000606239, 0.7, -0.0333334, 0.0122696, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 2.0]
}

[sub_resource type="Animation" id="Animation_ypegj"]
resource_name = "walking"
length = 2.0
loop_mode = 1
step = 0.0333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.015184, -0.25, 0, 0.25, 0, -6.15418e-05, -0.25, 0, 0.25, 0, -0.0149307, -0.25, 0, 0.25, 0, -6.15418e-05, -0.25, 0, 0.25, 0, 0.015184, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.7, -0.25, 0, 0.433333, 0.00490212, 0.749886, -0.25, 0, 0.25, 0, 0.700093, -0.4, 0.00499767, 0.4, 0.00443304, 0.749698, -0.25, 0, 0.25, 0, 0.69982, -0.366667, 0.00490212, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 2.0, 2.0]
}

[sub_resource type="Animation" id="Animation_u8dbi"]
resource_name = "wall_slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.174533)]
}

[sub_resource type="Animation" id="Animation_qxme2"]
resource_name = "wall_slide_end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.174533), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwx6h"]
_data = {
&"RESET": SubResource("Animation_lwx6h"),
&"crouch": SubResource("Animation_v8m2t"),
&"jump_end": SubResource("Animation_njtpt"),
&"jump_start": SubResource("Animation_vpqbg"),
&"sliding": SubResource("Animation_i2oq4"),
&"sprinting": SubResource("Animation_ioeo4"),
&"walking": SubResource("Animation_ypegj"),
&"wall_slide": SubResource("Animation_u8dbi"),
&"wall_slide_end": SubResource("Animation_qxme2")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_v8m2t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8dbi"]
radius = 0.82
height = 1.64

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "ANIMATIONPLAYER", "CROUCH_SHAPECAST")]
script = ExtResource("1_v8m2t")
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("ShapeCastTop")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4xowi")
debug_color = Color(0, 0.909804, 0.356863, 1)

[node name="PlaceholderMesh" type="MeshInstance3D" parent="CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_a202f")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1
blend_distance = 8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lwx6h")
}

[node name="ShapeCastTop" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_v8m2t")
target_position = Vector3(0, -0.4, 0)
debug_shape_custom_color = Color(0, 1, 0.470588, 1)

[node name="ShapeCastWall" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("CapsuleShape3D_u8dbi")
target_position = Vector3(0, -0.4, 0)
debug_shape_custom_color = Color(0, 1, 0.470588, 1)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_lwx6h")
RETICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]
PLAYER_CONTROLLER = NodePath("../..")
RETICLE_SPEED = 0.15
RETICLE_DISTANCE = 2.5

[node name="Top" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("3_r0vb7")
script = ExtResource("4_xf6l8")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_dn71m")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_ypegj")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_ec7y2")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_ioeo4")
metadata/_custom_type_script = "uid://c1ok8qpxxrvb8"

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_0pigf")
metadata/_custom_type_script = "uid://c1ok8qpxxrvb8"

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_i2oq4")
SPEED = 6.0
metadata/_custom_type_script = "uid://bxynjae0xjxpn"

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_vpqbg")
metadata/_custom_type_script = "uid://bxynjae0xjxpn"

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_njtpt")
metadata/_custom_type_script = "uid://bxynjae0xjxpn"

[node name="WallRunningPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_u8dbi")
metadata/_custom_type_script = "uid://bxynjae0xjxpn"

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
